[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/dialogic/Example Assets/Fonts/DefaultFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/dialogic/Example Assets/backgrounds/background-2.png" type="Texture" id=2]
[ext_resource path="res://addons/dialogic/Example Assets/next-indicator/next-indicator.png" type="Texture" id=3]
[ext_resource path="res://addons/dialogic/Nodes/TextBubble.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0 )
expand_margin_left = 10.0

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ) ]
}

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 0 )
expand_margin_left = 10.0

[node name="TextBubble" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -455.0
margin_top = 393.0
margin_right = 455.0
margin_bottom = 560.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
focus_mode = 2
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 0 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "Placeholder text for testing and formatting."
meta_underlined = false
text = "Placeholder text for testing and formatting."
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextIndicatorContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextIndicator" type="TextureRect" parent="NextIndicatorContainer"]
margin_top = -10.0
margin_right = 51.0
margin_bottom = 41.0
texture = ExtResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="NextIndicatorContainer/NextIndicator"]
autoplay = "Up and down"
anims/Pulse = SubResource( 3 )
anims/Static = SubResource( 4 )
"anims/Up and down" = SubResource( 5 )

[node name="NameLabel" type="Label" parent="."]
visible = false
margin_top = -48.0
margin_right = 58.0
margin_bottom = -8.0
size_flags_vertical = 1
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.423529, 0.580392, 0.74902, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.619608 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="NameLabel"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 15
size_flags_vertical = 15
color = Color( 0.156863, 0.156863, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="NameLabel"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WritingTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]
